--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
-    "manifest_version": 3,
-    "name": "Passgen -a simple password generator",
-    "description": "シンプルなパスワードジェネレーターです。 任意桁数と英数字のみ、英数字+記号でパスワードを生成できます。",
-    "version": "0.1",
-    "action": { "default_popup": "index.html" }
+  "manifest_version": 3,
+  "name": "Passgen -a simple password generator",
+  "description": "シンプルなパスワードジェネレーターです。 任意桁数と英数字のみ、英数字+記号でパスワードを生成できます。",
+  "version": "0.1",
+  "action": { "default_popup": "index.html" },
+  "icons": {
+    "16": "icons/passgen_16.png",
+    "48": "icons/passgen_48.png",
+    "128": "icons/passgen_128.png"
   }
+}
